--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,6 +7,7 @@ spec:
     version: v1
     component: "consul"
     configuration:
+      selfRegister: true
       client:
         address: $consulAddress
   tracing:
